# bing-backend

./: Cargo.toml  Rocket.toml  all.sql  dev.db
src/: login.rs  main.rs  moviedb.rs  restdatabase.rs
