[package]
name = "bing-backend"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
rusqlite = { version = "0.14.0" }
rocket = "0.4.5"
env_logger = "0.8.1" 
libsqlite3-sys = { version = ">=0.8.0, <0.20.2", optional = true, features = ["min_sqlite_version_3_7_16"] }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "databases", "sqlite_pool"]

[global.databases]
sqlite_logs = { url = "all.sql" }

