[package]
name = "bing-backend"
version = "0.1.0"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
rusqlite = { version = "0.14.0" }
rocket = "0.4.5"
env_logger = "0.8.1" 
lazy_static = "1"
r2d2_sqlite = "0.6.0"
r2d2 = "0.8.9"

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["json", "databases", "sqlite_pool", "serve","tera_templates"]

