[package]
name = "bing-backend"
version = "0.1.1"
authors = ["antash <mishraantash34@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.0.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
rocket = "0.4.5"
lazy_static = "1"
r2d2 = "0.8.9"
r2d2_mysql = "16.0"
reqwest = {version = "0.10.8", features = ["blocking", "json"]}
mysql = "*"
env_logger = "0.5.2"


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["json", "databases", "serve","tera_templates", "mysql_pool"]